--- a/src/components/Depositions/styles.module.scss
+++ b/src/components/Depositions/styles.module.scss
@@ -10,6 +10,13 @@
     color: $colorText;
     font-weight: bold;
     font-size: 52px;
+
+
+
+    @include device(tablet) {
+        width: 80rem;
+    }
+
 }
 
 
@@ -18,6 +25,16 @@
     padding: 0 10rem;
     display: flex;
     align-items: center;
+
+    @include device(mobile) {
+        flex-direction: row;
+        padding: 8rem;
+    }
+
+    @include device(tablet) {
+        flex-direction: row;
+        padding-left: 25rem;
+    }
 
     h3 {
         text-align: center;
